# bingo_game

./: .gitignore
client/: client.py  main.py  main2.py  package-lock.json
client/modules/: UIController.py  client.py
client/web/: index.html  lobby.html  register.html  test.html  test.js  waitroom.html
client/web/css/: index.css  lob.css  reg.css  wait.css
client/web/js/: func.js
server/: CMakeLists.txt  Makefile  main.c  main2.c
server/includes/: client.h  common.h  room.h  server.h  utils.h
server/src/: client.c  room.c  server.c  utils.c
